# kopyright

./: AUTHORS  Makefile.in  configure.in  configure.in.in
src/: Makefile.am  Makefile.in  dvdaudio.cpp  dvdaudio.h  dvdcell.cpp  dvdcell.h  dvdchapter.cpp  dvdchapter.h  dvdextract.cpp  dvdextract.h  dvdparsing.cpp  dvdparsing.h  dvdstream.cpp  dvdstream.h  dvdsubpicture.cpp  dvdsubpicture.h  dvdtitle.cpp  dvdtitle.h  dvdvideo.cpp  dvdvideo.h  dvdvisualice.cpp  dvdvisualice.h  fillstatus.cpp  fillstatus.h  kfillstatusdisplay.cpp  kfillstatusdisplay.h  kopyright.cpp  kopyright.desktop  kopyright.h  kopyright.lsm  kopyright_client.cpp  kopyrightiface.h  kopyrightui.rc  kopyrightview.cpp  kopyrightview.h  kopyrightviewbase.ui  main.cpp  pref.cpp  pref.h  qfillstatus.cpp  (+1 more)
